Fixes after libraries update